--- a/dashboard/css/style-dark.css
+++ b/dashboard/css/style-dark.css
@@ -996,7 +996,7 @@ ul#themecolors li a.working:before {
 	background: #6772e5;
 }
 .yellow-theme {
-	background: #ff9041;
+	background: #E78A1A;
 }
 .red-theme {
 	background: #E82E3F;
